--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&display=swap");
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background-color: #F0ECE5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 25rem;
+    border: 3px solid black;
+    font-family: "IBM Plex Mono", sans-serif;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    border-bottom: 3px solid black;
+}
+
+.profile-pic,
+.profile-name,
+.profile-description {
+    margin-bottom: 0.5rem;
+}
+
+.profile-description {
+    padding: 0rem 1rem;
+}
+
+.skill-tab {
+    display: flex;
+    width: fit-content;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
+    padding: 5px;
+    background-color: #FF8F8F;
+    border-radius: 10px;
+    font-weight: 500;
+    margin: 5px;
+}
+
+.skills-container {
+    display: flex;
+    flex-wrap: wrap;
 }
